k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oneflow
spec:
  selector: {app: oneflow}
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
